# magnetometer

./: CMakeLists.txt  README.md  package.xml
launch/: mag_test.launch
src/: mag_pub.py
