<?xml version="1.0"?>
<package format="2">
  <name>magnetometer</name>
  <version>1.0.0</version>
  <description>This package provides a ROS1 node for reading raw magnetometer data from a Yahboom IMU via serial interface, performing a simple calibration, and publishing the data as a `sensor_msgs/MagneticField` topic.</description>

  <maintainer email="contact@cjt-robotics.de">CJT-Robotics</maintainer>

  <license>TODO</license>

  <url type="website">https://cjt-robotics.de</url>
  <url type="repository">https://github.com/CJT-Robotics/magnetometer</url>

  <author email="markus.peltsarszky@gmail.com">Markus Peltsarszky</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
